frb_example/pure_dart_multi/dart/lib/bridge_generated_shared.io.dart


  void wire_test_method__method__SharedStructInBlock2And3(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock2And3> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__SharedStructInBlock2And3(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__SharedStructInBlock2And3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock2And3>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__SharedStructInBlock2And3');
  late final _wire_test_method__method__SharedStructInBlock2And3 =
      _wire_test_method__method__SharedStructInBlock2And3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__SharedStructOnlyForSyncTest(
    int port_,
    ffi.Pointer<wire_SharedStructOnlyForSyncTest> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__SharedStructOnlyForSyncTest(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__SharedStructOnlyForSyncTestPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructOnlyForSyncTest>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__SharedStructOnlyForSyncTest');
  late final _wire_test_method__method__SharedStructOnlyForSyncTest =
      _wire_test_method__method__SharedStructOnlyForSyncTestPtr.asFunction<
          void Function(int, ffi.Pointer<wire_SharedStructOnlyForSyncTest>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks(
      port_,
      message,
    );
  }

  late final _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks');
  late final _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks =
      _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocksPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocks(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocks(
      port_,
      message,
    );
  }

  late final _wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocks');
  late final _wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocks =
      _wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocksPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__CrossSharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__CrossSharedStructInBlock1And2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__CrossSharedStructInBlock1And2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__CrossSharedStructInBlock1And2');
  late final _wire_test_static_method__static_method__CrossSharedStructInBlock1And2 =
      _wire_test_static_method__static_method__CrossSharedStructInBlock1And2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__CrossSharedStructInBlock2And3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__CrossSharedStructInBlock2And3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__CrossSharedStructInBlock2And3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__CrossSharedStructInBlock2And3');
  late final _wire_test_static_method__static_method__CrossSharedStructInBlock2And3 =
      _wire_test_static_method__static_method__CrossSharedStructInBlock2And3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__SharedStructInAllBlocks(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructInAllBlocks(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__SharedStructInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__SharedStructInAllBlocks');
  late final _wire_test_static_method__static_method__SharedStructInAllBlocks =
      _wire_test_static_method__static_method__SharedStructInAllBlocksPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__SharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructInBlock1And2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__SharedStructInBlock1And2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__SharedStructInBlock1And2');
  late final _wire_test_static_method__static_method__SharedStructInBlock1And2 =
      _wire_test_static_method__static_method__SharedStructInBlock1And2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__SharedStructInBlock2And3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructInBlock2And3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__SharedStructInBlock2And3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__SharedStructInBlock2And3');
  late final _wire_test_static_method__static_method__SharedStructInBlock2And3 =
      _wire_test_static_method__static_method__SharedStructInBlock2And3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__SharedStructOnlyForSyncTest(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructOnlyForSyncTest(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__SharedStructOnlyForSyncTestPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__SharedStructOnlyForSyncTest');
  late final _wire_test_static_method__static_method__SharedStructOnlyForSyncTest =
      _wire_test_static_method__static_method__SharedStructOnlyForSyncTestPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  ffi.Pointer<wire_StringList> new_StringList(
    int len,
  ) {
    return _new_StringList(
      len,
    );
  }

  late final _new_StringListPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_StringList> Function(ffi.Int32)>>('new_StringList');
  late final _new_StringList = _new_StringListPtr.asFunction<ffi.Pointer<wire_StringList> Function(int)>();

  ffi.Pointer<wire_CrossSharedStructInBlock1And2> new_box_autoadd_cross_shared_struct_in_block_1_and_2() {
    return _new_box_autoadd_cross_shared_struct_in_block_1_and_2();
  }

  late final _new_box_autoadd_cross_shared_struct_in_block_1_and_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_CrossSharedStructInBlock1And2> Function()>>(
          'new_box_autoadd_cross_shared_struct_in_block_1_and_2');
  late final _new_box_autoadd_cross_shared_struct_in_block_1_and_2 =
      _new_box_autoadd_cross_shared_struct_in_block_1_and_2Ptr
          .asFunction<ffi.Pointer<wire_CrossSharedStructInBlock1And2> Function()>();

  ffi.Pointer<wire_CrossSharedStructInBlock2And3> new_box_autoadd_cross_shared_struct_in_block_2_and_3() {
    return _new_box_autoadd_cross_shared_struct_in_block_2_and_3();
  }

  late final _new_box_autoadd_cross_shared_struct_in_block_2_and_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_CrossSharedStructInBlock2And3> Function()>>(
          'new_box_autoadd_cross_shared_struct_in_block_2_and_3');
  late final _new_box_autoadd_cross_shared_struct_in_block_2_and_3 =
      _new_box_autoadd_cross_shared_struct_in_block_2_and_3Ptr
          .asFunction<ffi.Pointer<wire_CrossSharedStructInBlock2And3> Function()>();

  ffi.Pointer<ffi.Double> new_box_autoadd_f64(
    double value,
  ) {
    return _new_box_autoadd_f64(
      value,
    );
  }

  late final _new_box_autoadd_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Double> Function(ffi.Double)>>('new_box_autoadd_f64');
  late final _new_box_autoadd_f64 = _new_box_autoadd_f64Ptr.asFunction<ffi.Pointer<ffi.Double> Function(double)>();

  ffi.Pointer<ffi.Int32> new_box_autoadd_i32(
    int value,
  ) {
    return _new_box_autoadd_i32(
      value,
    );
  }

  late final _new_box_autoadd_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int32> Function(ffi.Int32)>>('new_box_autoadd_i32');
  late final _new_box_autoadd_i32 = _new_box_autoadd_i32Ptr.asFunction<ffi.Pointer<ffi.Int32> Function(int)>();

  ffi.Pointer<wire_SharedComplexEnumInAllBlocks> new_box_autoadd_shared_complex_enum_in_all_blocks() {
    return _new_box_autoadd_shared_complex_enum_in_all_blocks();
  }

  late final _new_box_autoadd_shared_complex_enum_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedComplexEnumInAllBlocks> Function()>>(
          'new_box_autoadd_shared_complex_enum_in_all_blocks');
  late final _new_box_autoadd_shared_complex_enum_in_all_blocks = _new_box_autoadd_shared_complex_enum_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_SharedComplexEnumInAllBlocks> Function()>();

  ffi.Pointer<wire_SharedStructInAllBlocks> new_box_autoadd_shared_struct_in_all_blocks() {
    return _new_box_autoadd_shared_struct_in_all_blocks();
  }

  late final _new_box_autoadd_shared_struct_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedStructInAllBlocks> Function()>>(
          'new_box_autoadd_shared_struct_in_all_blocks');
  late final _new_box_autoadd_shared_struct_in_all_blocks = _new_box_autoadd_shared_struct_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_SharedStructInAllBlocks> Function()>();

  ffi.Pointer<wire_SharedStructInBlock1And2> new_box_autoadd_shared_struct_in_block_1_and_2() {
    return _new_box_autoadd_shared_struct_in_block_1_and_2();
  }

  late final _new_box_autoadd_shared_struct_in_block_1_and_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedStructInBlock1And2> Function()>>(
          'new_box_autoadd_shared_struct_in_block_1_and_2');
  late final _new_box_autoadd_shared_struct_in_block_1_and_2 = _new_box_autoadd_shared_struct_in_block_1_and_2Ptr
      .asFunction<ffi.Pointer<wire_SharedStructInBlock1And2> Function()>();
